--- a/index.html
+++ b/index.html
@@ -3,311 +3,248 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="Thu Hồi Tài Sản" />
-
   <title>Thu Hồi Tài Sản</title>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- React -->
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-  <!-- QuaggaJS (Barcode Scanner) -->
-  <script src="https://unpkg.com/quagga@0.12.1/dist/quagga.min.js"></script>
-
+  <!-- Disable select -->
   <style>
     body {
-      -webkit-touch-callout: none;
       -webkit-user-select: none;
       user-select: none;
+    }
+
+    /* ===== SCANNER STYLE ===== */
+    #scanner-wrapper {
+      position: relative;
+      width: 100%;
+      height: 60vh;
+      background: black;
+      overflow: hidden;
+      border-radius: 12px;
+    }
+
+    #scanner video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.4);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      pointer-events: none;
+    }
+
+    .scan-area {
+      position: relative;
+      width: 80%;
+      max-width: 320px;
+      height: 160px;
+      border: 2px solid #00ffcc;
+      box-shadow: 0 0 0 9999px rgba(0,0,0,0.45);
+      border-radius: 12px;
+    }
+
+    .scan-line {
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background: red;
+      animation: scan 2s linear infinite;
+    }
+
+    @keyframes scan {
+      from { top: 0; }
+      to { top: calc(100% - 2px); }
     }
   </style>
 </head>
 
-<body class="bg-gradient-to-br from-blue-50 to-indigo-100">
-  <div id="root"></div>
+<body class="bg-gray-100">
 
-  <script type="text/babel">
-    const { useState, useRef } = React;
+<div id="root"></div>
 
-    function MobileConnectorApp() {
-      const [barcode, setBarcode] = useState('');
-      const [photo, setPhoto] = useState(null);
-      const [photoPreview, setPhotoPreview] = useState(null);
-      const [scanning, setScanning] = useState(false);
-      const [loading, setLoading] = useState(false);
-      const [status, setStatus] = useState('');
-      const [webhookUrl, setWebhookUrl] = useState(
-        localStorage.getItem('webhookUrl') || ''
-      );
+<!-- React -->
+<script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-      const fileInputRef = useRef(null);
+<!-- QuaggaJS -->
+<script src="https://unpkg.com/quagga/dist/quagga.min.js"></script>
 
-      /* ================= PHOTO ================= */
-      const handlePhotoCapture = (e) => {
-        const file = e.target.files[0];
-        if (!file) return;
+<script type="text/babel">
+const { useState, useEffect, useRef } = React;
 
-        setPhoto(file);
+function App() {
+  const [barcode, setBarcode] = useState("");
+  const [photo, setPhoto] = useState(null);
+  const [photoPreview, setPhotoPreview] = useState(null);
+  const [webhookUrl, setWebhookUrl] = useState(
+    localStorage.getItem("webhookUrl") || ""
+  );
+  const [status, setStatus] = useState("");
+  const fileInputRef = useRef(null);
 
-        const reader = new FileReader();
-        reader.onloadend = () => setPhotoPreview(reader.result);
-        reader.readAsDataURL(file);
-      };
+  /* ===== INIT CAMERA ===== */
+  useEffect(() => {
+    if (!window.Quagga) return;
 
-      /* ================= BARCODE SCAN ================= */
-     const startScan = async () => {
-  try {
-    // 1️⃣ Xin quyền camera trước
-    const stream = await navigator.mediaDevices.getUserMedia({
-      video: { facingMode: "environment" }
-    });
-
-    // Tắt stream test
-    stream.getTracks().forEach(track => track.stop());
-
-    // 2️⃣ Bật UI scan
-    setScanning(true);
-    
-    // 3️⃣ Init Quagga
     Quagga.init({
       inputStream: {
         type: "LiveStream",
         target: document.querySelector("#scanner"),
         constraints: {
-          facingMode: "environment",
-          width: { ideal: 720 },
-          height: { ideal: 720 }
+          facingMode: "environment"
         }
       },
       decoder: {
         readers: [
-          "ean_reader",
-          "ean_8_reader",
           "code_128_reader",
-          "code_39_reader",
-          "upc_reader"
+          "ean_reader",
+          "ean_8_reader"
         ]
-      },
-      locate: true
-    }, (err) => {
+      }
+    }, err => {
       if (err) {
-        alert("Không mở được camera");
         console.error(err);
-        setScanning(false);
         return;
       }
       Quagga.start();
     });
 
-    Quagga.onDetected(onBarcodeDetected);
+    Quagga.onDetected(res => {
+      const code = res.codeResult.code;
+      setBarcode(code);
+      Quagga.stop();
+    });
 
-  } catch (err) {
-    alert("Trình duyệt không cho phép camera");
-    console.error(err);
-  }
-};
-      // overplay camera
-    <div class="scanner-container">
-    
-    <div id="interactive" class="viewport">
-        <video autoplay="true" preload="auto" muted="true" playsinline="true"></video>
-    </div>
+    return () => {
+      try { Quagga.stop(); } catch(e){}
+    };
+  }, []);
 
-    <div class="scan-overlay">
-        <div class="scan-box">
-            <div class="scan-line"></div>
-        </div>
-    </div>
+  /* ===== PHOTO ===== */
+  const handlePhoto = e => {
+    const file = e.target.files[0];
+    if (!file) return;
+    setPhoto(file);
 
-</div>
+    const reader = new FileReader();
+    reader.onload = () => setPhotoPreview(reader.result);
+    reader.readAsDataURL(file);
+  };
 
-
-      const onBarcodeDetected = (result) => {
-        const code = result.codeResult.code;
-        setBarcode(code);
-        stopScan();
-      };
-
-      const stopScan = () => {
-        Quagga.stop();
-        Quagga.offDetected(onBarcodeDetected);
-        setScanning(false);
-      };
-
-      /* ================= SEND TO N8N ================= */
-      const sendToN8n = async () => {
-        // ❗ chỉ chặn khi CẢ HAI cùng rỗng
-        if (!barcode && !photo) {
-          setStatus('error');
-          setTimeout(() => setStatus(''), 3000);
-          return;
-        }
-
-        if (!webhookUrl) {
-          alert('Vui lòng nhập Webhook URL n8n');
-          return;
-        }
-
-        setLoading(true);
-
-        let base64Photo = null;
-
-        if (photo) {
-          base64Photo = await new Promise((resolve) => {
-            const reader = new FileReader();
-            reader.onloadend = () => resolve(reader.result);
-            reader.readAsDataURL(photo);
-          });
-        }
-
-        const payload = {
-          timestamp: new Date().toISOString(),
-          device: navigator.userAgent,
-        };
-
-        if (barcode) payload.barcode = barcode;
-        if (base64Photo) {
-          payload.photo = base64Photo;
-          payload.photoName = photo.name;
-        }
-
-        try {
-          const res = await fetch(webhookUrl, {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(payload),
-          });
-
-          if (res.ok) {
-            setStatus('success');
-            setBarcode('');
-            setPhoto(null);
-            setPhotoPreview(null);
-          } else {
-            setStatus('error');
-          }
-        } catch (e) {
-          console.error(e);
-          setStatus('error');
-        }
-
-        setLoading(false);
-        setTimeout(() => setStatus(''), 3000);
-      };
-
-      /* ================= UI ================= */
-      return (
-        <div className="min-h-screen p-4 pb-8">
-          <div className="max-w-md mx-auto">
-
-            <div className="bg-white rounded-2xl shadow-lg p-6 mt-6 space-y-5">
-
-              <h1 className="text-2xl font-bold text-gray-800">
-                📦 Thu Hồi Tài Sản
-              </h1>
-              <p className="text-sm text-gray-500">
-                Có thể gửi <b>ảnh hoặc mã vạch</b> (không bắt buộc cả hai)
-              </p>
-
-              {/* Webhook */}
-              <input
-                type="text"
-                value={webhookUrl}
-                onChange={(e) => {
-                  setWebhookUrl(e.target.value);
-                  localStorage.setItem('webhookUrl', e.target.value);
-                }}
-                placeholder="Webhook URL n8n"
-                className="w-full px-4 py-2 border rounded-lg"
-              />
-
-              {/* Barcode */}
-              <div className="flex gap-2">
-                <input
-                  value={barcode}
-                  onChange={(e) => setBarcode(e.target.value)}
-                  placeholder="Nhập hoặc quét barcode"
-                  className="flex-1 px-4 py-3 border rounded-lg font-mono"
-                />
-                <button
-                  onClick={startScan}
-                  type="button"
-                  className="px-4 py-3 bg-indigo-600 text-white rounded-lg"
-                >
-                  Quét
-                </button>
-              </div>
-
-              {/* Photo */}
-              <input
-                ref={fileInputRef}
-                type="file"
-                accept="image/*"
-                capture="environment"
-                onChange={handlePhotoCapture}
-                className="hidden"
-              />
-              <button
-                type="button"
-                onClick={() => fileInputRef.current.click()}
-                className="w-full py-3 border-2 border-dashed rounded-lg"
-              >
-                {photo ? 'Chụp lại ảnh' : 'Chụp ảnh vật tư'}
-              </button>
-
-              {photoPreview && (
-                <img src={photoPreview} className="rounded-lg" />
-              )}
-
-              {/* Scanner Overlay */}
-              {scanning && (
-                <div className="fixed inset-0 bg-black/80 z-50 flex flex-col">
-                  <div id="scanner" className="flex-1"></div>
-                  <button
-                    onClick={stopScan}
-                    className="bg-red-600 text-white py-3"
-                  >
-                    Đóng camera
-                  </button>
-                </div>
-              )}
-
-              {/* Submit */}
-              <button
-                onClick={sendToN8n}
-                disabled={loading || (!barcode && !photo)}
-                className="w-full py-4 bg-indigo-600 text-white rounded-lg disabled:bg-gray-400"
-              >
-                {loading ? 'Đang gửi...' : 'Gửi dữ liệu lên n8n'}
-              </button>
-
-              {status === 'success' && (
-                <div className="text-green-600 font-medium">
-                  ✅ Gửi thành công
-                </div>
-              )}
-              {status === 'error' && (
-                <div className="text-red-600 font-medium">
-                  ❌ Lỗi gửi dữ liệu
-                </div>
-              )}
-            </div>
-          </div>
-        </div>
-      );
+  /* ===== SEND TO N8N ===== */
+  const sendToN8n = async () => {
+    if (!barcode && !photo) {
+      alert("Cần ít nhất BARCODE hoặc ẢNH");
+      return;
     }
 
-    ReactDOM.render(<MobileConnectorApp />, document.getElementById('root'));
-  </script>
+    let photoBase64 = null;
+    if (photo) {
+      photoBase64 = await new Promise(res => {
+        const r = new FileReader();
+        r.onload = () => res(r.result);
+        r.readAsDataURL(photo);
+      });
+    }
+
+    const payload = {
+      barcode: barcode || null,
+      photo: photoBase64,
+      timestamp: new Date().toISOString(),
+      device: navigator.userAgent
+    };
+
+    const r = await fetch(webhookUrl, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload)
+    });
+
+    setStatus(r.ok ? "success" : "error");
+    setTimeout(() => setStatus(""), 3000);
+  };
+
+  return (
+    <div className="max-w-md mx-auto p-4 space-y-4">
+
+      <h1 className="text-xl font-bold text-center">📦 Thu Hồi Tài Sản</h1>
+
+      {/* Webhook */}
+      <input
+        className="w-full p-2 border rounded"
+        placeholder="Webhook URL n8n"
+        value={webhookUrl}
+        onChange={e => {
+          setWebhookUrl(e.target.value);
+          localStorage.setItem("webhookUrl", e.target.value);
+        }}
+      />
+
+      {/* Barcode */}
+      <input
+        className="w-full p-2 border rounded"
+        placeholder="Barcode (tự điền khi quét)"
+        value={barcode}
+        onChange={e => setBarcode(e.target.value)}
+      />
+
+      {/* Scanner */}
+      <div id="scanner-wrapper">
+        <div id="scanner"></div>
+        <div className="overlay">
+          <div className="scan-area">
+            <div className="scan-line"></div>
+          </div>
+        </div>
+      </div>
+
+      {/* Photo */}
+      <input
+        type="file"
+        accept="image/*"
+        capture="environment"
+        ref={fileInputRef}
+        className="hidden"
+        onChange={handlePhoto}
+      />
+
+      <button
+        onClick={() => fileInputRef.current.click()}
+        className="w-full bg-gray-200 p-2 rounded"
+      >
+        📷 Chụp ảnh vật tư
+      </button>
+
+      {photoPreview && (
+        <img src={photoPreview} className="rounded border" />
+      )}
+
+      {/* Submit */}
+      <button
+        onClick={sendToN8n}
+        className="w-full bg-indigo-600 text-white p-3 rounded font-bold"
+      >
+        🚀 Gửi lên n8n
+      </button>
+
+      {status === "success" && <p className="text-green-600">✔ Gửi thành công</p>}
+      {status === "error" && <p className="text-red-600">✖ Gửi lỗi</p>}
+    </div>
+  );
+}
+
+ReactDOM.createRoot(document.getElementById("root")).render(<App />);
+</script>
+
 </body>
 </html>
-
-
-
-
