--- a/index.html
+++ b/index.html
@@ -153,7 +153,6 @@ function App() {
         locator: { halfSample: false },
         decoder: {
           readers: [
-            "qr_reader",
             "code_128_reader",
             "ean_reader",
             "ean_8_reader"
@@ -169,9 +168,14 @@ function App() {
         stopAll();
       });
     };
-
-    supportsBarcodeDetector ? startNative() : startQuagga();
-    return stopAll;
+try {
+  supportsBarcodeDetector ? startNative() : startQuagga();
+} catch (err) {
+  console.error("Camera error:", err);
+  alert("Không thể mở camera. Vui lòng kiểm tra quyền hoặc trình duyệt.");
+}
+return stopAll;
+    
   }, [cameraOn]);
 
   /* ===== PHOTO ===== */
